--- a/style.css
+++ b/style.css
@@ -18,20 +18,22 @@ body {
     background-color: #1a1a1a;
 }
 
-body.correct {
-    background-color: aliceblue;
+.correct {
+    background-color: green;
 }
-body.wrong {
+.wrong {
     background-color: red;
 }
 
 .container {
+    position: relative;
     width:700px;
     max-width: 90%;
     background-color: rgba(33,37,41,0.8);
     padding:20px;
     border-radius: 15px;
     box-shadow: 0 0 15px 3px;
+    transition: 0.5s;
 }
 
 .grid {
@@ -93,4 +95,31 @@ body.wrong {
 
 .hide {
     display: none;
+}
+
+.well {
+    color: rgba(255, 255, 255, 0.92);
+    font-size:3rem;
+    font-weight:600;
+    background-color:#000;
+    padding:20px;
+    text-align: center;
+    transition: 0.5s;
+    position: absolute;
+    top:0;
+    width:90%;
+    margin:0 auto;
+    display:none;
+    visibility: hidden;
+}
+
+.show {
+    display: block;
+    visibility: visible;
+    top:50px;
+    left:0;
+    right:0;
+    width:50%;
+    margin:0 auto;
+    transition: 0.5s;
 }
